changes wt lab 1

--- a/WT PRAC/LAB 1/Profile/Profile.html
+++ b/WT PRAC/LAB 1/Profile/Profile.html
@@ -15,7 +15,7 @@
     <div id="header">
       <img
         id="profileImage"
-        src="D:\SPIT\WEB TECH\Profile\img.png"
+        src="D:\SPIT\WT PRAC\LAB 1\Profile\img.png"
         alt="Atharva Angre"
       />
       <div class="header-right">
@@ -185,21 +185,21 @@
         <tr>
           <td>
             <img
-              src="D:\SPIT\WEB TECH\Profile\1.jpeg"
+              src="D:\SPIT\WT PRAC\LAB 1\Profile\1.jpeg"
               alt="Image 1"
               class="ach-img"
             />
           </td>
           <td>
             <img
-              src="D:\SPIT\WEB TECH\Profile\6.jpg"
+              src="D:\SPIT\WT PRAC\LAB 1\Profile\6.jpg"
               alt="Image 6"
               class="ach-img"
             />
           </td>
           <td>
             <img
-              src="D:\SPIT\WEB TECH\Profile\2.jpeg"
+              src="D:\SPIT\WT PRAC\LAB 1\Profile\2.jpeg"
               alt="Image 2"
               class="ach-img"
             />
@@ -225,21 +225,21 @@
         <tr>
           <td>
             <img
-              src="D:\SPIT\WEB TECH\Profile\5.jpeg"
+              src="D:\SPIT\WT PRAC\LAB 1\Profile\5.jpeg"
               alt="Image 5"
               class="ach-img"
             />
           </td>
           <td>
             <img
-              src="D:\SPIT\WEB TECH\Profile\3.jpeg"
+              src="D:\SPIT\WT PRAC\LAB 1\Profile\3.jpeg"
               alt="Image 3"
               class="ach-img"
             />
           </td>
           <td>
             <img
-              src="D:\SPIT\WEB TECH\Profile\4.jpeg"
+              src="D:\SPIT\WT PRAC\LAB 1\Profile\4.jpeg"
               alt="Image 4"
               class="ach-img"
             />
@@ -261,7 +261,7 @@
 
       <video width="720" height="415" controls>
         <source
-          src="D:\SPIT\WEB TECH\Profile\VN20230729_214907.mp4"
+          src="D:\SPIT\WT PRAC\LAB 1\Profile\VN20230729_214907.mp4"
           type="video/mp4"
         />
       </video>
