--- a/WT PRAC/LAB 1/StaticWeb/Nike.html
+++ b/WT PRAC/LAB 1/StaticWeb/Nike.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="logo-container">
-        <img src="D:\SPIT\WEB TECH\StaticWeb\brand_logo.png" alt="Brand Logo" />
+        <img src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\brand_logo.png" alt="Brand Logo" />
         <p id="jdi">JUST DO IT!</p>
       </div>
 
@@ -83,7 +83,7 @@
           <div style="margin-top: 5%; transform: rotate(-20deg)">
             <img
               id="shoe"
-              src="D:\SPIT\WEB TECH\StaticWeb\NIKE+REVOLUTION+7.jpeg"
+              src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\NIKE+REVOLUTION+7.jpeg"
             />
           </div>
         </div>
@@ -102,14 +102,14 @@
             href="https://www.flipkart.com/mens-footwear/nike~brand/pr?sid=osp%2Ccil&p%5B%5D=facets.brand%255B%255D%3DNIKE"
             target="_blank"
           >
-            <img src="D:\SPIT\WEB TECH\StaticWeb\flipkart.png" />
+            <img src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\flipkart.png" />
           </a>
           
           <a
             href="https://www.flipkart.com/mens-footwear/nike~brand/pr?sid=osp%2Ccil&p%5B%5D=facets.brand%255B%255D%3DNIKE"
             target="_blank"
           >
-            <img id="amazon" src="D:\SPIT\WEB TECH\StaticWeb\amazon.png" />
+            <img id="amazon" src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\amazon.png" />
           </a>
           </div>
          
@@ -137,7 +137,7 @@
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WEB TECH\StaticWeb\shoe1.png"
+                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe1.png"
                 style="width: 280px"
                 alt="shoe1"
               />
@@ -153,7 +153,7 @@
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WEB TECH\StaticWeb\shoe2.png"
+                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe2.png"
                 style="width: 280px"
                 alt="shoe2"
               />
@@ -169,7 +169,7 @@
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WEB TECH\StaticWeb\shoe3.png"
+                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe3.png"
                 style="width: 280px"
                 alt="shoe3"
               />
@@ -185,7 +185,7 @@
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WEB TECH\StaticWeb\shoe4.png"
+                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe4.png"
                 style="width: 280px"
                 alt="shoe4"
               />
@@ -201,7 +201,7 @@
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WEB TECH\StaticWeb\shoe5.png"
+                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe5.png"
                 style="width: 280px"
                 alt="shoe5"
               />
@@ -217,7 +217,7 @@
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WEB TECH\StaticWeb\shoe6.png"
+                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe6.png"
                 style="width: 280px"
                 alt="shoe6"
               />
@@ -233,7 +233,7 @@
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WEB TECH\StaticWeb\shoe7.png"
+                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe7.png"
                 style="width: 280px"
                 alt="shoe7"
               />
@@ -249,7 +249,7 @@
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WEB TECH\StaticWeb\shoe8.png"
+                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe8.png"
                 style="width: 280px"
                 alt="shoe8"
               />
