ds modulo dividen, wt lab 3

--- a/WT PRAC/LAB 3/DynamicWeb/Nike.html
+++ b/WT PRAC/LAB 3/DynamicWeb/Nike.html
@@ -134,6 +134,10 @@
           <div
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
+            data-name="Nike Dunk Low Retro"
+        data-description="Men's Shoes"
+        data-price="₹ 8,295.00"
+        onclick="logShoeDetails(this)"
           >
             <div style="text-align: center; width: 100%">
               <img
@@ -495,5 +499,7 @@
         </div>
       </div>
     </section>
+    <script src="script.js"></script>
+    
   </body>
 </html>
