--- a/WT PRAC/LAB 3/DynamicWeb/Nike.html
+++ b/WT PRAC/LAB 3/DynamicWeb/Nike.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="logo-container">
-        <img src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\brand_logo.png" alt="Brand Logo" />
+        <img src="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\brand_logo.png" alt="Brand Logo" />
         <p id="jdi">JUST DO IT!</p>
       </div>
 
@@ -80,10 +80,13 @@
             </div>
           </div>
           <!-- shoe image -->
-          <div style="margin-top: 5%; transform: rotate(-20deg)">
+          <div style="margin-top: 5%; 
+          transform: rotate(-16deg)
+          "
+          >
             <img
               id="shoe"
-              src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\NIKE+REVOLUTION+7.jpeg"
+              src="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\NIKE+REVOLUTION+7.jpeg"
             />
           </div>
         </div>
@@ -102,14 +105,14 @@
             href="https://www.flipkart.com/mens-footwear/nike~brand/pr?sid=osp%2Ccil&p%5B%5D=facets.brand%255B%255D%3DNIKE"
             target="_blank"
           >
-            <img src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\flipkart.png" />
+            <img src="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\flipkart.png" />
           </a>
           
           <a
             href="https://www.flipkart.com/mens-footwear/nike~brand/pr?sid=osp%2Ccil&p%5B%5D=facets.brand%255B%255D%3DNIKE"
             target="_blank"
           >
-            <img id="amazon" src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\amazon.png" />
+            <img id="amazon" src="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\amazon.png" />
           </a>
           </div>
          
@@ -134,19 +137,20 @@
           <div
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
-            data-name="Nike Dunk Low Retro"
-        data-description="Men's Shoes"
-        data-price="₹ 8,295.00"
-        onclick="logShoeDetails(this)"
+            data-name="Nike Downshifter 13"
+            data-image="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe1.png"
+            data-description="Men's Road Running Shoes"
+            data-price="MRP : ₹ 4,295.00"
+            onclick="logShoeDetails(this)"
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe1.png"
+                src="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe1.png"
                 style="width: 280px"
                 alt="shoe1"
               />
               <h4>Nike Downshifter 13</h4>
-              <p>Men's Road Running Shoe</p>
+              <p>Men's Road Running Shoes</p>
               <p>MRP : ₹ 4,295.00</p>
             </div>
           </div>
@@ -154,10 +158,14 @@
           <div
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
+            data-name="Nike Dunk Low Retro"
+            data-description="Men's Shoes"
+            data-price="MRP : ₹ 8,295.00"
+            onclick="logShoeDetails(this)"
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe2.png"
+                src="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe2.png"
                 style="width: 280px"
                 alt="shoe2"
               />
@@ -170,10 +178,14 @@
           <div
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
+            data-name="Nike Air Max Ishod"
+            data-description="Men's Shoes"
+            data-price="MRP : ₹ 9,207.00"
+            onclick="logShoeDetails(this)"
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe3.png"
+                src="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe3.png"
                 style="width: 280px"
                 alt="shoe3"
               />
@@ -186,10 +198,14 @@
           <div
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
+            data-name="Nike Legend Essential 3 Next Nature"
+            data-description="Men's Workout Shoes"
+            data-price="MRP : ₹ 4,995.00"
+            onclick="logShoeDetails(this)"
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe4.png"
+                src="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe4.png"
                 style="width: 280px"
                 alt="shoe4"
               />
@@ -202,10 +218,14 @@
           <div
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
+            data-name="Nike Impact 4"
+            data-description="Basketball Shoes"
+            data-price="MRP : ₹ 8,067.00"
+            onclick="logShoeDetails(this)"
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe5.png"
+                src="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe5.png"
                 style="width: 280px"
                 alt="shoe5"
               />
@@ -218,10 +238,14 @@
           <div
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
+            data-name="Nike Free RN NN"
+            data-description="Men's Road Running Shoes"
+            data-price="MRP : ₹ 8,257.00"
+            onclick="logShoeDetails(this)"
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe6.png"
+                src="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe6.png"
                 style="width: 280px"
                 alt="shoe6"
               />
@@ -234,10 +258,14 @@
           <div
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
+            data-name="Nike Pegasus 41 Premium"
+            data-description="Men's Road Running Shoes"
+            data-price="MRP : ₹ 12,795.00"
+            onclick="logShoeDetails(this)"
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe7.png"
+                src="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe7.png"
                 style="width: 280px"
                 alt="shoe7"
               />
@@ -250,10 +278,14 @@
           <div
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
+            data-name="Nike ISPA Link Axis"
+            data-description="Men's Shoes"
+            data-price="MRP : ₹ 25,457.00"
+            onclick="logShoeDetails(this)"
           >
             <div style="text-align: center; width: 100%">
               <img
-                src="D:\SPIT\WT PRAC\LAB 1\StaticWeb\shoe8.png"
+                src="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe8.png"
                 style="width: 280px"
                 alt="shoe8"
               />
