lab 3 and ds lab 3

--- a/WT PRAC/LAB 3/DynamicWeb/Nike.html
+++ b/WT PRAC/LAB 3/DynamicWeb/Nike.html
@@ -159,6 +159,7 @@
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
             data-name="Nike Dunk Low Retro"
+            data-image="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe2.png"
             data-description="Men's Shoes"
             data-price="MRP : ₹ 8,295.00"
             onclick="logShoeDetails(this)"
@@ -179,6 +180,7 @@
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
             data-name="Nike Air Max Ishod"
+            data-image="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe3.png"
             data-description="Men's Shoes"
             data-price="MRP : ₹ 9,207.00"
             onclick="logShoeDetails(this)"
@@ -199,6 +201,7 @@
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
             data-name="Nike Legend Essential 3 Next Nature"
+            data-image="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe4.png"
             data-description="Men's Workout Shoes"
             data-price="MRP : ₹ 4,995.00"
             onclick="logShoeDetails(this)"
@@ -219,6 +222,7 @@
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
             data-name="Nike Impact 4"
+            data-image="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe5.png"
             data-description="Basketball Shoes"
             data-price="MRP : ₹ 8,067.00"
             onclick="logShoeDetails(this)"
@@ -239,6 +243,7 @@
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
             data-name="Nike Free RN NN"
+            data-image="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe6.png"
             data-description="Men's Road Running Shoes"
             data-price="MRP : ₹ 8,257.00"
             onclick="logShoeDetails(this)"
@@ -259,6 +264,7 @@
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
             data-name="Nike Pegasus 41 Premium"
+            data-image="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe7.png"
             data-description="Men's Road Running Shoes"
             data-price="MRP : ₹ 12,795.00"
             onclick="logShoeDetails(this)"
@@ -279,6 +285,7 @@
             class="shoeContainer"
             style="display: inline-block; margin-right: 20px"
             data-name="Nike ISPA Link Axis"
+            data-image="C:\Users\MOHANKUMAR\Downloads\SPIT\WT PRAC\LAB 3\DynamicWeb\shoe8.png"
             data-description="Men's Shoes"
             data-price="MRP : ₹ 25,457.00"
             onclick="logShoeDetails(this)"
